...

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
...

                            <ImageView
                                android:id="@+id/ivAddServices"
                                android:layout_width="24dp"
                                android:layout_height="24dp"
...

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/serviceRecycView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                                <ImageView
                                    android:id="@+id/ivAddTyreConfig"
                                    android:layout_width="24dp"
                                    android:layout_height="24dp"
...

                                            <ImageView
                                                android:id="@+id/ivInfoImgLF"
                                                android:layout_width="32dp"
                                                android:layout_height="32dp"
...

                                            <ImageView
                                                android:id="@+id/ivInfoImgLR"
                                                android:layout_width="32dp"
                                                android:layout_height="32dp"
...

                                                <ImageView
                                                    android:id="@+id/ivTyre1"
                                                    android:layout_width="55dp"
                                                    android:layout_height="55dp"
...

                                                <ImageView
                                                    android:id="@+id/ivTyre2"
                                                    android:layout_width="55dp"
                                                    android:layout_height="55dp"
...

                                                <ImageView
                                                    android:id="@+id/ivTyre3"
                                                    android:layout_width="55dp"
                                                    android:layout_height="55dp"
...

                                                <ImageView
                                                    android:id="@+id/ivTyre4"
                                                    android:layout_width="55dp"
                                                    android:layout_height="55dp"
...

                                            <ImageView
                                                android:id="@+id/ivInfoImgRF"
                                                android:layout_width="32dp"
                                                android:layout_height="32dp"
...

                                            <ImageView
                                                android:id="@+id/ivInfoImgRR"
                                                android:layout_width="32dp"
                                                android:layout_height="32dp"
...
