...
                                            android:layout_width="105dp"
                                            android:layout_height="match_parent"
                                            android:background="@drawable/service_layout_bg"
                                            android:orientation="vertical">

                                            <CheckBox
                                                android:id="@+id/chkNitrogenTopup"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:buttonTint="@color/text_color2" />

                                            <LinearLayout
                                                android:layout_width="match_parent"
...
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:orientation="horizontal">

                                        <RadioButton
                                            android:id="@+id/radioLF_LR"
                                            android:layout_width="0dp"
                                            android:layout_height="wrap_content"
                                            android:layout_gravity="center"
                                            android:layout_weight="1"
                                            android:buttonTint="@color/text_color2"
                                            android:gravity="center"
...
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:orientation="horizontal">

                                        <RadioButton
                                            android:id="@+id/radioRR_LF"
                                            android:layout_width="0dp"
                                            android:layout_height="wrap_content"
                                            android:layout_gravity="center"
                                            android:layout_weight="1"
                                            android:buttonTint="@color/header_title"
                                            android:gravity="center"
...
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/twenty_dp"
                            android:gravity="center"
                            android:orientation="vertical">

                            <LinearLayout
                                android:id="@+id/cardtyreConfig"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="start|center"
                                android:orientation="horizontal">

...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <com.walkins.aapkedoorstep.custom.BoldTextView
            android:id="@+id/tvSkipService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/eight_dp"
            android:text="Skip Service"
...
